# rust-speedb

./: .gitmodules  Cargo.toml  README.md
libspeedb-sys/: Cargo.toml  Makefile  build.rs  build_version.cc  speedb_lib_sources.txt
libspeedb-sys/tests/: ffi.rs
src/: backup.rs  db_iterator.rs  db_options.rs  ffi_util.rs  lib.rs  merge_operator.rs  snapshot.rs  write_batch.rs
src/transactions/: optimistic_transaction_db.rs  transaction_db.rs
tests/: test_backup.rs  test_checkpoint.rs  test_column_family.rs  test_comparator.rs  test_compationfilter.rs  test_db.rs  test_iterator.rs  test_merge_operator.rs  test_multithreaded.rs  test_optimistic_transaction_db.rs  test_pinnable_slice.rs  test_property.rs  test_raw_iterator.rs  test_rocksdb_options.rs  test_slice_transform.rs  test_sst_file_writer.rs  test_transaction_db.rs  test_write_batch.rs
tests/fail/: checkpoint_outlive_db.rs  iterator_outlive_db.rs  open_with_multiple_refs_as_single_threaded.rs  snapshot_outlive_db.rs  snapshot_outlive_transaction.rs  snapshot_outlive_transaction_db.rs  transaction_outlive_transaction_db.rs
tests/util/: mod.rs
